fixing readability

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -80,7 +80,7 @@ ul{
     margin-left:0px;
 }
 @include media-query($on-desk) {
-    width:95%;
+    width:65%;
     margin:0 auto;
     }
 }
